Fix align

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,9 @@
 }
 
 .weather__block1 {
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .weather__block2 {
